[metadata]
name = attacktree
version = 0.0.16
author = hyakuhei
author_email = hyakuhei@gmail.com
summary = Build, analyize and render attack trees
description = Describe attack-defense-attack sequences using python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hyakuhei/attackTrees
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
	graphviz >=0.16
include_package_data = true

[options.packages.find]
where = src
exclude =
	build*
	dist*
	docs*
	tests*
